--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,12 @@
-version: "3.9"
 services:
   api:
     restart: "always"
-    volumes:
-      - $HOME/.aws/credentials:/root/.aws/credentials:ro
     build:
       context: "./"
-      dockerfile: "Dockerfile.debug"
+      dockerfile: "Dockerfile"
       args:
-        API_PORT: ${API_PORT}
         IMAGE_REGISTRY_BASE_URL: ${IMAGE_REGISTRY_BASE_URL}
     ports:
-      - "${API_PORT}:${API_PORT}"
-      - "6789:6789"
+      - "${COMINGSOON_PORT}:${COMINGSOON_PORT}"
     env_file:
       - .env
