--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "oph.api.comingsoon",
-  "version": "1.0.0",
+  "version": "0.0.0",
   "description": "OPH Coming Soon API",
   "main": "lib/index.js",
   "repository": "git",
@@ -11,7 +11,7 @@
     "node": ">=22.9"
   },
   "scripts": {
-    "clean:all": "yarn clean && yarn clean:modules",
+    "clean:all": "npm run clean && npm run clean:modules",
     "clean": "rm -rf lib types",
     "clean:modules": "rm -rf node_modules",
     "build": "tsc",
@@ -38,6 +38,5 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "uuid": "^10.0.0"
-  },
-  "packageManager": "yarn@4.5.0"
+  }
 }
